# cyrsovaya5

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
src/: config.py  dbmanager.py
